extend .gitignore to common build and IDE files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
-*.idea
+*.log
+*.swp
+*.orig
+*.project
+*.classpath
+*.settings
+*.iws
+*.ipr
 *.iml
-target
+.DS_Store
+target/
+bin/
+.idea/
+pom.xml.releaseBackup
+release.properties
