--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,6 @@
   "name": "cfp-speaker",
   "version": "0.0.0",
   "dependencies": {
-    "unstable-angular-complete": "ryanzec/bower-unstable-angular-complete#~1.1.4",
     "json3": "~3.2.4",
     "es5-shim": "~2.0.8",
     "jquery.uniform": "2.1.1",
@@ -11,6 +10,7 @@
     "modernizr": "~2.6.2",
     "angular-bootstrap": "~0.3.0",
     "meanMenu": "weare2ndfloor/meanMenu",
-    "isotope": "~1.5.25"
+    "isotope": "~1.5.25",
+    "angular": "~1.0.7"
   }
 }
