--- a/bower.json
+++ b/bower.json
@@ -1,16 +1,18 @@
 {
-  "name": "cfp-speaker",
-  "version": "0.0.0",
-  "dependencies": {
-    "json3": "~3.2.4",
-    "es5-shim": "~2.0.8",
-    "jquery.uniform": "2.1.1",
-    "bxslider-4": "latest",
-    "jquery": "~1.9.1",
-    "modernizr": "~2.6.2",
-    "angular-bootstrap": "~0.3.0",
-    "meanMenu": "weare2ndfloor/meanMenu",
-    "isotope": "~1.5.25",
-    "angular": "~1.0.7"
-  }
+    "name": "cfp-speaker",
+    "version": "0.0.0",
+    "dependencies": {
+        "json3": "~3.2.4",
+        "es5-shim": "~2.0.8",
+        "jquery": "~1.9.1",
+        "jquery.uniform": "2.1.1",
+        "bxslider-4": "latest",
+        "modernizr": "~2.6.2",
+        "angular": "~1.0.7",
+        "angular-cookies": "~1.0.7",
+        "angular-bootstrap": "~0.3.0",
+        "meanMenu": "weare2ndfloor/meanMenu",
+        "isotope": "~1.5.25",
+        "moment": "~2.0.0"
+    }
 }
