--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
         "jquery.uniform": "2.1.1",
         "bxslider-4": "latest",
         "modernizr": "~2.6.2",
-        "angular": "~1.0.7",
+        "unstable-angular-complete": "~1.1.5",
         "angular-cookies": "~1.0.7",
         "angular-bootstrap": "~0.3.0",
         "meanMenu": "weare2ndfloor/meanMenu",
