--- a/bower.json
+++ b/bower.json
@@ -1,17 +1,17 @@
 {
-    "name": "cfp-speaker",
-    "version": "0.0.0",
-    "dependencies": {
-        "json3": "~3.2.4",
-        "es5-shim": "~2.0.8",
-        "jquery": "~1.9.1",
-        "jquery.uniform": "2.1.1",
-        "bxslider-4": "latest",
-        "modernizr": "~2.6.2",
-        "unstable-angular-complete": "~1.1.5",
-        "angular-bootstrap": "~0.3.0",
-        "meanMenu": "weare2ndfloor/meanMenu",
-        "isotope": "~1.5.25",
-        "moment": "~2.0.0"
-    }
+  "name": "cfp-speaker",
+  "version": "0.0.0",
+  "dependencies": {
+    "json3": "~3.2.4",
+    "es5-shim": "~2.0.8",
+    "jquery": "~1.9.1",
+    "jquery.uniform": "2.1.1",
+    "bxslider-4": "clakech/bxslider-4#~0.0.0",
+    "modernizr": "~2.6.2",
+    "unstable-angular-complete": "~1.1.5",
+    "angular-bootstrap": "~0.3.0",
+    "meanMenu": "weare2ndfloor/meanMenu",
+    "isotope": "~1.5.25",
+    "moment": "~2.0.0"
+  }
 }
