--- a/bower.json
+++ b/bower.json
@@ -12,8 +12,6 @@
     "angular-bootstrap": "~0.3.0",
     "meanMenu": "weare2ndfloor/meanMenu",
     "isotope": "~1.5.25",
-    "moment": "~2.0.0",
-    "jquery.cookie": "~1.4.0",
-    "jquery-local-storage": "clakech/jquery-local-storage#master"
+    "moment": "~2.0.0"
   }
 }
