--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "isotope": "~1.5.25",
     "moment": "~2.0.0",
     "jquery.cookie": "~1.4.0",
-    "jquery-local-storage": "clakech/jquery-local-storage#master"
+    "jquery-local-storage": "clakech/jquery-local-storage#master",
+    "underscore": "~1.5.2"
   }
 }
