--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "matchdep": "~0.1.1",
     "grunt-google-cdn": "~0.1.1",
     "grunt-ngmin": "~0.0.2",
-    "grunt-cfp-static": "git://github.com/devoxx/grunt-cfp-static.git"
+    "grunt-cfp-static": "git://github.com/devoxx/grunt-cfp-static.git",
+    "grunt-recess": "~0.4.0"
   },
   "engines": {
     "node": ">=0.8.0"
