Upgraded AngularJS to 1.2.25 (no more unstable!), and Angular Bootstrap to 0.11.0

--- a/bower.json
+++ b/bower.json
@@ -8,8 +8,11 @@
     "jquery.uniform": "2.1.1",
     "bxslider-4": "clakech/bxslider-4#~0.0.0",
     "modernizr": "~2.6.2",
-    "unstable-angular-complete": "~1.1.5",
-    "angular-bootstrap": "~0.3.0",
+    "angular": "~1.2.25",
+    "angular-route": "~1.2.25",
+    "angular-cookies": "~1.2.25",
+    "angular-mocks": "~1.2.25",
+    "angular-bootstrap": "~0.11.0",
     "meanMenu": "weare2ndfloor/meanMenu",
     "isotope": "~1.5.25",
     "moment": "~2.0.0",
